# opord-builder

./: .gitignore  README.md  Taskfile.yml  pyproject.toml
docs/: annex_reference.html
docs/schema/: index.html
examples/: example_full.html  example_full.md  example_full.yaml  example_full_with_sources.yaml  example_hybrid.yaml  example_minimal.html  example_minimal.md  example_minimal.yaml  example_with_sources.yaml  frago_01_iron_strike.yaml  warno_01_iron_strike.yaml  warno_standalone.yaml
examples/data_sources/airspace/: aar_tracks.yaml  aic_sectors.yaml  airspace_zones.yaml  awacs_orbits.yaml  cap_tracks.yaml  geo_refs.yaml  ingress_corridors.yaml
examples/data_sources/fires/: hpt.yaml  jpitl.yaml  tst.yaml
opord_builder/: __init__.py  __main__.py  _paths.py  annex_reference.py  appendix_catalog.py  cli.py  merge.py  renderer.py  scaffolds.py
opord_builder/schema/: __init__.py  _base.py  annexes.py  core.py  data_sources.py  shared.py
opord_builder/templates/: _ci_macros.html.j2  _ci_macros.md.j2  _delta_partials.html.j2  _delta_partials.md.j2  frago.html.j2  frago.md.j2  kneeboard.html.j2  opord.html.j2  opord.md.j2  product.html.j2  styles.css  warno.html.j2  warno.md.j2
schemas/: hpt.schema.json  jpitl.schema.json  opord.schema.json  tst.schema.json
tests/: test_data_sources.py  test_render.py
