[project]
name = "opord-builder"
version = "0.1.0"
description = "YAML-driven OPORD builder that renders clean Markdown and drippy PDFs."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "opord-builder" }]
dependencies = [
  "pydantic>=2.6,<3",
  "pyyaml>=6.0",
  "jinja2>=3.1",
  "weasyprint>=62",
  "typer>=0.12",
  "watchfiles>=0.21",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pypdfium2>=4.30",
  "json-schema-for-humans>=1.0",
  "ruff>=0.6",
]

[project.scripts]
opord = "opord_builder.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["opord_builder"]

[tool.hatch.build]
include = [
  "opord_builder/**/*.py",
  "opord_builder/templates/**/*",
]
